# d-merge

./: .clippy.toml  .gitignore  .gitmodules  .prettierrc.js  .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md  biome.jsonc  cspell.jsonc  merge_design.md  package-lock.json  package.json  vite.config.ts  vitest.workspace.ts
cli/: Cargo.toml  readme.md
cli/src/: config.rs  ini_parser.rs  main.rs  mod_info_cmd.rs
cli/src/args/: examples.rs  mod.rs
core/: Cargo.toml
core/auto_charset/: Cargo.toml
core/auto_charset/src/: lib.rs
core/crc/: Cargo.toml
core/egui-shadcn/: Cargo.toml  LICENSE  README.md
core/egui-shadcn/src/: lib.rs
core/egui-shadcn/src/icons/: icon_element.rs  lucide_icon.rs  lucide_icon_data.rs  mod.rs  paint_icon.rs  parse_path.rs  parse_svg.rs  path_command.rs
core/egui-shadcn/src/layout/: center.rs  flex.rs  flex_instance.rs  mod.rs
core/egui-shadcn/src/paint/: interpolate_color.rs  mod.rs  paint_arc.rs  paint_dashed_rect.rs  paint_focus_ring.rs
core/egui-shadcn/src/theme/: mod.rs  setup_fonts.rs  shadcn_theme.rs  shadcn_theme_dark.rs  shadcn_theme_ext.rs  shadcn_theme_light.rs
core/egui-shadcn/src/tokens/: alert_variant.rs  badge_variant.rs  button_variant.rs  component_size.rs  item_variant.rs  mod.rs  sheet_side.rs  toast_variant.rs  toggle_variant.rs  typography_variant.rs
core/egui-shadcn/src/widgets/: mod.rs
core/fnis_list/: Cargo.toml
core/fnis_list/src/: lib.rs  test_helpers.rs
core/fnis_list/src/combinator/: anim_types.rs  anim_var.rs  comment.rs  flags.rs  fnis_animation.rs  mod.rs  motion.rs  rotation.rs  version.rs
core/fnis_list/src/patterns/: chair.rs  furniture.rs  mod.rs  sequenced.rs
core/gh_issue_link/: Cargo.toml
core/gh_issue_link/src/: lib.rs  version.rs
core/json_patch/: Cargo.toml
core/json_patch/src/: json_path.rs  lib.rs  operation.rs  patch_types.rs  ptr_mut.rs  vec_utils.rs
core/json_patch/src/apply/: add.rs  error.rs  mod.rs  remove.rs  replace.rs  seq.rs
core/json_patch/src/json_path/: mod.rs  nested_path.rs
core/json_patch/src/merge/: add.rs  error.rs  mod.rs  remove.rs  replace.rs
core/json_patch/src/merger/: add.rs  error.rs  mod.rs  range.rs  remove.rs  replace.rs
core/json_patch/src/range/: error.rs  mod.rs  parse.rs  split_range.rs
core/json_patch/src/searcher/: error.rs  mod.rs
core/json_patch/tests/: integration.rs  test_0067.json
core/jwalk_glob/: Cargo.toml
core/jwalk_glob/src/: glob.rs  lib.rs
core/mod_info/: Cargo.toml
core/mod_info/src/: error.rs  lib.rs
core/nemesis_merge/: Cargo.toml
core/nemesis_merge/src/: aliases.rs  cache_remover.rs  collect_path.rs  config.rs  error.rs  lib.rs  output_path.rs  path_id.rs  results.rs  tables.rs  types.rs
core/nemesis_merge/src/adsf/: mod.rs  path_parser.rs  sort.rs
core/nemesis_merge/src/behavior/: generate.rs
core/nemesis_merge/src/behaviors/: mod.rs
core/nemesis_merge/src/config/: mod.rs  options.rs  reporter.rs  status.rs
core/nemesis_merge/src/errors/: defines.rs  mod.rs  write_errors.rs  writer.rs
core/nemesis_merge/src/hkx/: generate.rs
core/nemesis_merge/src/merger/: aliases.rs  apply_patches.rs  async_load.rs  behavior_gen.rs  collect_templates_and_patches.rs  config.rs  hkx_files_gen.rs  merge_patches.rs  mod.rs  patches_gen.rs  results.rs  save_to_hkx.rs  tables.rs  write_errors.rs
core/nemesis_merge/src/patches/: apply.rs  collect.rs  generate.rs  map.rs  merge.rs  merge_bac.rs  mod.rs  replace_vars.rs
core/nemesis_merge/src/paths/: collect.rs  id.rs  mod.rs  parse.rs
core/nemesis_merge/src/templates/: collect.rs  collect_owned.rs  gen_bin.rs  mod.rs  tables.rs
core/nemesis_merge/src/tests/: global_logger.rs  mod.rs  patches_builder.rs  status.rs
core/nemesis_xml/: Cargo.toml
core/nemesis_xml/src/: error.rs  lib.rs
core/nemesis_xml/src/hack/: bone_weight.rs  bs_ragdoll_event.rs  mod.rs
core/nemesis_xml/src/helpers/: comment.rs  mod.rs  ptr.rs  tag.rs  variable.rs  (+1 more)
core/node_expr/: Cargo.toml
core/node_expr/src/: error.rs  lib.rs
core/serde_hkx_for_gui/: Cargo.toml
core/serde_hkx_for_gui/src/: hash.rs  hkanno.rs  lib.rs  par_walk_dir.rs  status.rs
core/skyrim_anim_parser/: Cargo.toml
core/skyrim_anim_parser/src/: adsf.rs  asdsf.rs  lib.rs  lines.rs
core/skyrim_crc/: Cargo.toml
core/skyrim_crc/src/: lib.rs
core/skyrim_data_dir/: Cargo.toml
core/skyrim_data_dir/src/: lib.rs  windows.rs
core/skyrim_esp/: Cargo.toml
core/skyrim_esp/src/: lib.rs
core/src/: crc32.rs  error.rs  lib.rs  mod_info.rs  path_node.rs
core/src/parser/: adsf.rs  asdsf.rs  lines.rs  mod.rs  readable_err.rs
core/tracing_rotation/: Cargo.toml
core/tracing_rotation/src/: error.rs  global.rs  lib.rs  rotate.rs
ffi/javascript/node/: .gitignore  Cargo.toml  index.d.ts  index.js  package.json  vitest.config.ts
ffi/mo2_pluign/: pyproject.toml
ffi/mo2_pluign/d_merge_mo2_plugin/: __init__.py  data_grid.py  plugin.py
ffi/python/: Cargo.toml  d_merge_python.pyi  pyproject.toml
ffi/python/src/: behavior.rs  lib.rs  log.rs  patch.rs  py_config.rs  serde_hkx_.rs  status.rs
ffi/python/test/: test.py
gui/app_egui/: Cargo.toml  build.rs
gui/app_egui/src/: app.rs  cache_remover.rs  dnd.rs  fonts.rs  i18n.rs  log.rs  main.rs  mod_item.rs  settings.rs  ui.rs
gui/backend/: Cargo.toml  tauri.conf.json
gui/backend/capabilities/: main.json
gui/backend/electron/: esbuild.config.cjs  package.json  readme.md  tsconfig.json  vite.electron.config.ts
gui/backend/icons/: icon.icns
gui/backend/src/: cmd.rs  error.rs  log.rs  main.rs
gui/backend/tauri/: Cargo.toml  tauri.conf.json
gui/egui/: Cargo.toml  build.rs
gui/egui/src/: app.rs  dnd.rs  fonts.rs  i18n.rs  log.rs  main.rs  mod_item.rs  settings.rs  theme.rs  ui.rs
gui/egui/themes/: amethyst_glass.json  dark.json  forest_glass.json  light.json  light_glass.json  nord_glass.json  obsidian_glass.json  ocean_glass.json  one_dark_glass.json  sardonyx_dark_glass.json  violet_black_glass.json
gui/egui_derive/: Cargo.toml
gui/shared/: Cargo.toml
gui/shared/src/: fetch.rs  fs.rs  i18n.rs  lib.rs  log.rs  mod_item.rs  patch.rs
(+927 files in other folders)
