[package]
name = "fnis_list"
version.workspace = true
description = "Parser for FNIS's List.txt"

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords = ["parser"]
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
bitflags = "2.11.0"
winnow = { workspace = true }

# workspace members
skyrim_anim_parser = { workspace = true }

[lints]
workspace = true
