[package]
name = "json_patch"
version = "0.1.0"
description = "D merge core"

authors.workspace = true
categories = ["development-tools"]
edition.workspace = true
keywords = ["skyrim"]
license = "MIT OR Apache-2.0"
readme = "../../README.md"
repository.workspace = true
rust-version.workspace = true

[dependencies]
rayon = { workspace = true, optional = true }
serde = { workspace = true, optional = true }   # Implement (De)Serializer
simd-json = { workspace = true }
snafu = { workspace = true }
tracing = { workspace = true, optional = true }
winnow = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
quick_tracing = { workspace = true }

[lints]
workspace = true

[features]
# default = ["tracing", "rayon"] # for debug
tracing = ["dep:tracing"]
serde = ["dep:serde"]
rayon = ["dep:rayon"]
