[package]
name = "nemesis_merge"
version = "0.1.0"
description = "D merge core"

authors.workspace = true
categories = ["development-tools"]
edition.workspace = true
keywords = ["skyrim"]
license = "GPL-3.0"
readme = "../../README.md"
repository.workspace = true
rust-version.workspace = true

[dependencies]
bitflags = "2.10.0"
dashmap = { workspace = true, features = ["rayon", "serde"] }
glob = { workspace = true }
indexmap = { workspace = true }
jwalk = { workspace = true }
phf = { workspace = true, features = ["macros"] }
rayon = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true }
serde_hkx = { workspace = true }
serde_hkx_features = { workspace = true, features = [
  "extra_fmt",
  "serde_default",
] }
simd-json = { workspace = true }
snafu = { workspace = true }
sonic-rs = "0.5.6"
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
winnow = { workspace = true }

# workspace members
auto_charset = { workspace = true }
json_patch = { workspace = true, features = ["rayon", "serde"] }
nemesis_xml = { workspace = true }
skyrim_anim_parser = { workspace = true, features = ["alt_map", "serde"] }

[dev-dependencies]
havok_classes = { workspace = true }
pretty_assertions = { workspace = true }
quick_tracing = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true

[features]
default = ["debug"]

# Output patch json, json just before hkx
debug = ["tracing"]

tracing = [
  "dep:tracing",
  "dep:tracing-subscriber",
  "json_patch/tracing",
  "serde_hkx_features/dedup_tracing",
]

# Enables TypeScript-compatible serialization for the `Status` enum.
# This feature modifies the `Status` enum to use Serde's externally tagged representation
# with `type` and `message` keys, making it easier to consume in TypeScript/JavaScript frontend.
#
# Example serialized form:
#   { "type": "ReadingTemplatesAndPatches" }
#   { "type": "Error", "message": "Something went wrong" }
#
# Disable this feature if you prefer the default Rust/Serde enum format.
ts_serde = []

# Enable the hkx auto-conversion feature to resolve the mysterious mutex error randomly occurring in MO2.
unstable_conversion = []
