[package]
name = "nemesis_merge"
version = "0.1.0"
description = "D merge core"

authors.workspace = true
categories = ["development-tools"]
edition.workspace = true
keywords = ["skyrim"]
license = "GPL-3.0"
readme = "../../README.md"
repository.workspace = true
rust-version.workspace = true

[dependencies]
dashmap = { workspace = true, features = ["rayon", "serde"] }
indexmap = { workspace = true }
jwalk = { workspace = true }
phf = { workspace = true, features = ["macros"] }
rapidhash = { workspace = true }
rayon = { workspace = true }
rmp-serde = { workspace = true }
schemars = { version = "1.2.1", optional = true }
serde = { workspace = true }
serde_hkx = { workspace = true }
serde_hkx_features = { workspace = true, features = ["extra_fmt", "serde_default"] }
serde_path_to_error = { version = "0.1.20", optional = true }
simd-json = { workspace = true }
snafu = { workspace = true }
sonic-rs = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true, optional = true }
winnow = { workspace = true }
winnow_ext = { workspace = true }

# workspace members
auto_charset = { workspace = true }
fnis_list = { workspace = true }
json_patch = { workspace = true, features = ["rayon", "serde"] }
nemesis_xml = { workspace = true }
skyrim_anim_parser = { workspace = true, features = ["alt_map", "serde"] }
skyrim_esp = { workspace = true }

[dev-dependencies]
havok_classes = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
quick_tracing = { version = "*" }

# workspace members
jwalk_glob = { workspace = true }
mod_info = { workspace = true }
tracing_rotation = { workspace = true }

[lints]
workspace = true

[features]
default = ["tracing"]
# default = ["tracing", "json_error_path"] # For debug

tracing = ["dep:tracing", "json_patch/tracing", "serde_hkx_features/dedup_tracing"]


# Enables TypeScript-compatible serialization for the `Status` enum.
# This feature modifies the `Status` enum to use Serde's externally tagged representation
# with `type` and `message` keys, making it easier to consume in TypeScript/JavaScript frontend.
#
# Example serialized form:
#   { "type": "ReadingTemplatesAndPatches" }
#   { "type": "Error", "message": "Something went wrong" }
#
# Disable this feature if you prefer the default Rust/Serde enum format.
ts_serde = []

# FNIS Alternate Animation SKSE config schema
schema = ["dep:schemars"]

# Debug simd_json error path location
json_error_path = ["dep:serde_path_to_error"]
