[package]
name = "nemesis_xml"
version = "0.1.0"
description = "D merge core"

authors.workspace = true
categories = ["development-tools"]
edition.workspace = true
keywords = ["skyrim"]
license.workspace = true
readme = "../../README.md"
repository.workspace = true
rust-version.workspace = true

[dependencies]
phf = { workspace = true, features = ["macros"] }
rayon = { workspace = true }
serde_hkx = { workspace = true }
simd-json = { workspace = true }
snafu = { workspace = true }
tracing = { workspace = true, optional = true }
winnow = { workspace = true }

# workspace members
json_patch = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
quick_tracing = { workspace = true }

[lints]
workspace = true

[features]
default = ["serde", "tracing"] # for debug
serde = []

tracing = ["dep:tracing"]
