[package]
name = "skyrim_anim_parser"
version = "0.1.0"
description = "D merge core"

authors.workspace = true
categories = ["development-tools"]
edition.workspace = true
keywords = ["skyrim"]
license.workspace = true
readme = "../../README.md"
repository.workspace = true
rust-version.workspace = true

[dependencies]
indexmap = { workspace = true, optional = true }
rayon = { workspace = true }
serde = { workspace = true, optional = true }    # Implement (De)Serializer
serde_hkx = { workspace = true }
tracing = { workspace = true, optional = true }
winnow = { workspace = true }

[dev-dependencies]
rmp-serde = "1.3.0"
serde_json = { workspace = true }
pretty_assertions = { workspace = true }
quick_tracing = { workspace = true }
serde_hkx_features = { workspace = true }

[lints]
workspace = true

[features]
default = ["tracing", "serde", "alt_map"] # for debug

# alternative to adsf indexmap
alt_map = ["serde", "indexmap/serde"]

serde = ["dep:serde"]

tracing = ["dep:tracing"]
