[package]
name = "skyrim_anim_parser"
version = "0.1.0"
description = "D merge core"

authors.workspace = true
categories = ["development-tools"]
edition.workspace = true
keywords = ["skyrim"]
license = "GPL-3.0"
readme = "../../README.md"
repository.workspace = true
rust-version.workspace = true

[dependencies]
bitvec = "1.0.1"
dashmap = { workspace = true, features = ["rayon"], optional = true }
indexmap = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true, optional = true }                         # Implement (De)Serializer
serde_hkx = { workspace = true }
simd-json = { workspace = true }
snafu = { workspace = true }
tracing = { workspace = true, optional = true }
winnow = { workspace = true }

# workspace members
json_patch = { workspace = true, features = ["rayon"] }

[dev-dependencies]
diff = { workspace = true }
pretty_assertions = { workspace = true }
quick_tracing = { workspace = true }
rmp-serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true

[features]
# default = ["tracing", "serde", "alt_map"] # for debug
# default = ["tracing", "serde"] # for debug

# alternative to adsf indexmap
alt_map = ["serde", "bitvec/serde", "dep:dashmap"]

serde = ["dep:serde", "json_patch/serde", "indexmap/serde"]

tracing = ["dep:tracing"]
