[package]
name = "d_merge_python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "d_merge_ffi"
crate-type = ["cdylib"]

[dependencies]
nemesis_merge = { workspace = true }
pyo3 = "0.25.1"
pyo3-async-runtimes = { version = "0.25", features = [
  "attributes",
  "tokio-runtime",
] }
tokio = { workspace = true }
