[package]
name = "d_merge_python"
version.workspace = true
description = "d-merge GUI"

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords = ["skyrim", "python", "ffi"]
license = "GPL-3.0"
readme = "../../readme.md"
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "d_merge_python"
crate-type = ["cdylib"]

[dependencies]
nemesis_merge = { workspace = true }
pyo3 = "0.25.1"
pyo3-async-runtimes = { version = "0.25", features = [
  "attributes",
  "tokio-runtime",
] }
tokio = { workspace = true }
