[package]
name = "d_merge_python"
version.workspace = true
description = "d-merge for Python3"

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords = ["skyrim", "python", "ffi"]
license = "GPL-3.0"
readme = "../../readme.md"
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "d_merge_python"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = "0.27.1"
pyo3-async-runtimes = { version = "0.27", features = [
  "attributes",
  "tokio-runtime",
] }
pyo3-stub-gen = "0.16.1"

rayon = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# workspace members
mod_info = { workspace = true }
nemesis_merge = { workspace = true }
serde_hkx_for_gui = { workspace = true }
skyrim_data_dir = { workspace = true }
tracing_rotation = { workspace = true }
