[package]
name = "d_merge_egui"
version = "0.1.0"
description = "merge"

authors.workspace = true
categories = ["development-tools"]
edition.workspace = true
keywords = ["skyrim"]
license = "GPL-3.0"
readme = "../../README.md"
repository.workspace = true
rust-version.workspace = true

[build-dependencies]
winres = "0.1.12"

[dependencies]
eframe = "0.32.1"
egui = { version = "0.32.1" }
egui_dnd = "0.13.0"
egui_extras = "0.32.1"
egui_virtual_list = "0.8.0"
ico = "0.4.0"
notify = "8.2.0"
open = { version = "5.3.2" }
rfd = "0.15.4"

rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# workspace members
mod_info = { workspace = true }
nemesis_merge = { workspace = true }
# serde_hkx_for_gui = { workspace = true }
skyrim_data_dir = { workspace = true, features = ["serde"] }
tracing_rotation = { workspace = true }

[lints]
workspace = true
