[package]
name = "d_merge_egui"
version.workspace = true
description = "Diff & Merge hkx patcher"

authors.workspace = true
categories = ["development-tools"]
edition.workspace = true
keywords = ["skyrim"]
license = "GPL-3.0"
readme = "../../README.md"
repository.workspace = true
rust-version.workspace = true
build = "build.rs"


[build-dependencies]
winres = "0.1.12"


[dependencies]
# Fixed version. To avoid scroll crash bug
eframe = { version = "0.33.0" }
egui = { version = "0.33.3", features = ["rayon"] }
egui_dnd = "0.14.0"
egui_extras = "0.33.0"
egui-shadcn = { git = "https://github.com/SARDONYX-forks/egui-shadcn.git", rev = "fa5ceee" }
image = { version = "0.25.10", features = ["jpeg", "png"] }
# ---

bitflags = "2.13.1"
dashmap = { workspace = true }
dark-light = "2.0.0"
font-kit = "0.14.3"
mimalloc = { version = "0.1.50", optional = true }
parking_lot = { workspace = true }
rapidhash = { workspace = true }
rayon = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# workspace members
mod_info = { workspace = true }
nemesis_merge = { workspace = true, features = ["tracing"] }
skyrim_data_dir = { workspace = true, features = ["serde"] }
tracing_rotation = { workspace = true }
d_merge_gui_shared = { path = "../shared", features = ["tracing"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
rfd = { version = "0.17.2", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
rfd = { version = "0.15.4", features = ["xdg-portal"] }
wgpu = { version = "29.0.4", default-features = true, features = [
  "fragile-send-sync-non-atomic-wasm",
], optional = true } # https://github.com/emilk/egui/issues/4885#issuecomment-2256316573


[features]
default = ["mimalloc"]

# The patch time was reduced by 4secs.
mimalloc = ["dep:mimalloc"]

# Use WebGPU
wgpu = ["eframe/wgpu", "dep:wgpu"]


[lints]
workspace = true
